2.ambient mesh istio/demo-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-depl-1
  namespace: ambient
  labels:
    app: echoserver-depl-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver-app-1
  template:
    metadata:
      labels:
        app: echoserver-app-1
    spec:
      serviceAccountName: echo-service-account-1
      containers:
      - name: echoserver-app-1
        image: imeshai/echoserver
        ports:
        - containerPort: 80
