2.ambient mesh istio/demo.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver-virtual-service
  namespace: ambient
spec:
  hosts:
    - "*"
  gateways:
    - echoserver-gateway
  http:
    - match:
        - uri:
            exact: /echo1
      route:
        - destination:
            host: echoserver-service-1
            port:
              number: 80
    - match:
        - uri:
            exact: /echo2
      route:
        - destination:
            host: echoserver-service-2
            port:
              number: 80
