2.ambient mesh istio/demo-authorization-l4.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: echoserver-policy
  namespace: ambient
spec:
  selector:
    matchLabels:
      # app: echoserver-app-1
      istio.io/gateway-name: echoserver-gtw-1
  # Apply this policy to requests coming from the ingress gateway
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
      to: 
      - operation:
         methods: ["GET"]
